# wasmpath

./: Cargo.toml  flake.nix
examples/rust/: Cargo.toml
examples/rust-a-star/: Cargo.toml
examples/rust-a-star/src/: bindings.rs  lib.rs
examples/rust-basic/: Cargo.toml
examples/rust-basic/src/: lib.rs
examples/rust/src/: bindings.rs  lib.rs
src/: grid.rs  lib.rs  main.rs  tests.rs  timer.rs
wit/: deps.toml  world.wit
