[package]
name = "wasmpath"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "examples/*"
]

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
macroquad = "0.4.10"
rand = "0.8.5"
slab = "0.4.9"
tokio = { version = "1.38.0", features = ["full"] }
wasmtime = "22.0.0"
wasmtime-wasi = "22.0.0"
