[package]
name = "wasmpath"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "examples/rust-basic",
  "examples/rust-a-star",
]

[dependencies]
anyhow = "1"
async-trait = "0.1.80"
macroquad = "0.4.10"
rand = "0.8.5"
slab = "0.4.10"
tokio = { version = "1", features = ["full"] }
wasmtime = "35.0.0"
wasmtime-wasi = "35.0.0"
