[package]
name = "rust-a-star"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen = "0.26.0"
wit-bindgen-rt = { version = "0.26.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component.target.dependencies]
"wasi:logging" = { path = "./wit/deps/logging" }
